--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 stargate-*.tar
 
+# Ignore dialyzer's cached plt files.
+.dialyzer/
