--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,12 @@ jobs:
         with:
           otp-version: 22.2
           elixir-version: 1.9.4
-      - name: Compile
+      - name: Build
+        run: |
+          mix local.rebar --force
+          mix local.hex --force
+          mix deps.get
+      - name: Publish
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
         run: |
