testing cache restore keys

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,8 @@ jobs:
         with:
           path: .dialyzer
           key: dialyzer-plt
+          restore-keys: |
+            dialyzer-
       - name: Get dependencies
         run: |
           mix local.rebar --force
