--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
         with:
           otp-version: 23.2
-          elixir-version: 1.11.0
+          elixir-version: 1.11
       - name: Get dependencies
         run: |
           mix local.rebar --force
